[package]
name = "pbkdf_pass_runner"
version = "0.1.1"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
rayon = "1.5.0"
pbkdf2 = { version = "0.6.0", default-features = false, features = ["parallel"] }
sha-1 = "0.9.2"
hmac = "0.10.1"

[profile.release]
opt-level = 3
lto = true
debug = true
